# Suai_labs_programming_2024

./: .gitignore  CMakeLists.txt  Lab1.cpp  Lab1.h  Lab1.tpp  Lab4.cpp  Lab4.h  Lab5.cpp  Lab5.h  Lab6.h  lab2.cpp  lab3.cpp  main.cpp
Utils/: PrintStream.h  Scanner.cpp  Scanner.h
collections/: LinkedList.h
src/: lab1.c  main.c
src/collections/: Queue.c  Queue.h  Stack.c
src/utils/: Printer.c  Printer.h  Scanner.c  Scanner.h
utils/: Scanner.h
