cmake_minimum_required(VERSION 3.29)
project(Suai_labs_programming_2024)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp
        Lab1.tpp
        Lab1.h
        main.cpp
        Utils/Scanner.h
        Lab1.tpp
        Utils/PrintStream.h
        Lab4.cpp
        Lab4.h
        Lab5.cpp
        Lab5.h
        collections/LinkedList.h
        Lab6.h
        lab2.cpp
        lab3.cpp
)
